--- a/vermontcomplexsystems-foundation.rw8/Pages/08-Partnerships/ChildPages/1-MassMutual-Center-of-Excellence/ChildPages/1-Summer-REU/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/08-Partnerships/ChildPages/1-MassMutual-Center-of-Excellence/ChildPages/1-Summer-REU/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2022-09-12T15:06:08Z</date>
+						<date>2022-09-22T18:10:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -104,21 +104,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								nc/RlhmvGDDL
-								K+SuTjMLPQ==
+								JV5ejNT3Y8/E
+								W0wI16l5/Q==
 								</data>
 								<key>Size</key>
-								<integer>35262</integer>
+								<integer>35252</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								tvAomUQyeND0
-								vTpTZz/VVg==
+								Su+ZpJd1NY34
+								s0J16tjsFg==
 								</data>
 								<key>Size</key>
-								<integer>68367</integer>
+								<integer>68409</integer>
 							</dict>
 							<key>files/stacks-image-2706f3f.png</key>
 							<dict>
@@ -144,11 +144,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Hwezk6t72J5g
-								2awHy7YAqA==
+								0LBTZh9Y4iZ6
+								By0DZuC++A==
 								</data>
 								<key>Size</key>
-								<integer>19470</integer>
+								<integer>19463</integer>
 							</dict>
 							<key>files/stacks_page_page84.css</key>
 							<dict>
@@ -174,11 +174,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								lNxV66qE7UgU
-								dE4G2mkC6w==
+								muy/Mf9baUNr
+								qScz2S+N3A==
 								</data>
 								<key>Size</key>
-								<integer>55802</integer>
+								<integer>55847</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
