update Projects and External Faculty pages
update images in Projects page; update faculty in External Faculty page

--- a/vermontcomplexsystems-foundation.rw8/Pages/04-Research/ChildPages/02-Projects/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/04-Research/ChildPages/02-Projects/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2022-09-30T17:02:46Z</date>
+						<date>2022-09-30T18:16:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -140,6 +140,86 @@
 								<key>Size</key>
 								<integer>68409</integer>
 							</dict>
+							<key>files/stacks-image-2474c62.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								2kWxD5GUP01Y
+								K0nrjXZ84g==
+								</data>
+								<key>Size</key>
+								<integer>52706</integer>
+							</dict>
+							<key>files/stacks-image-39e0260.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								8ARcWC3SMAs+
+								1ZgSSvcDzg==
+								</data>
+								<key>Size</key>
+								<integer>40861</integer>
+							</dict>
+							<key>files/stacks-image-46f15c9.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								9ro1kjLmPuhA
+								kPhcTV9Zjw==
+								</data>
+								<key>Size</key>
+								<integer>51855</integer>
+							</dict>
+							<key>files/stacks-image-5518809-300x256.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								5J65SV8/66H9
+								NaJDpRWeMA==
+								</data>
+								<key>Size</key>
+								<integer>30907</integer>
+							</dict>
+							<key>files/stacks-image-5518809-300x256@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								4NetCrzPEA7/
+								fRx6xrb0SQ==
+								</data>
+								<key>Size</key>
+								<integer>53372</integer>
+							</dict>
+							<key>files/stacks-image-bd6dcce-300x256.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								5J65SV8/66H9
+								NaJDpRWeMA==
+								</data>
+								<key>Size</key>
+								<integer>30907</integer>
+							</dict>
+							<key>files/stacks-image-bd6dcce-300x256@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								4NetCrzPEA7/
+								fRx6xrb0SQ==
+								</data>
+								<key>Size</key>
+								<integer>53372</integer>
+							</dict>
+							<key>files/stacks-image-d515f7c.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								ax7j5gRCsEZm
+								9LSwlbahzg==
+								</data>
+								<key>Size</key>
+								<integer>51798</integer>
+							</dict>
 							<key>files/stacks-image-e97f241-400x164.png</key>
 							<dict>
 								<key>Digest</key>
@@ -149,6 +229,16 @@
 								</data>
 								<key>Size</key>
 								<integer>19463</integer>
+							</dict>
+							<key>files/stacks.css</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								wgmIAuepvJFg
+								INqwDCfPXQ==
+								</data>
+								<key>Size</key>
+								<integer>1879</integer>
 							</dict>
 							<key>files/stacks_page_page26.css</key>
 							<dict>
@@ -174,11 +264,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Em1R7uoAJV8n
-								zXnnRodUFw==
+								jgOpjbIjpu3K
+								YpxVej/GbA==
 								</data>
 								<key>Size</key>
-								<integer>50327</integer>
+								<integer>51035</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
