--- a/vermontcomplexsystems-foundation.rw8/Pages/04-Research/ChildPages/02-Projects/ChildPages/2-LEMURS/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/04-Research/ChildPages/02-Projects/ChildPages/2-LEMURS/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2022-09-30T17:02:46Z</date>
+						<date>2022-09-30T18:24:08Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -120,15 +120,25 @@
 								<key>Size</key>
 								<integer>19463</integer>
 							</dict>
+							<key>files/stacks.css</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								wgmIAuepvJFg
+								INqwDCfPXQ==
+								</data>
+								<key>Size</key>
+								<integer>1879</integer>
+							</dict>
 							<key>files/stacks_page_page29.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Ylov2XyTxAjk
-								wVU7eVk5NQ==
+								DfygjWAcPN6/
+								sE0tBSmzPQ==
 								</data>
 								<key>Size</key>
-								<integer>90166</integer>
+								<integer>89979</integer>
 							</dict>
 							<key>files/stacks_page_page29.js</key>
 							<dict>
@@ -144,11 +154,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								oonVsyZUBQ5r
-								cfJzxzxKzw==
+								JmjQlK/ZylvN
+								BYy1YZQYdw==
 								</data>
 								<key>Size</key>
-								<integer>38914</integer>
+								<integer>38734</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
