--- a/vermontcomplexsystems-foundation.rw8/RWUIState.plist
+++ b/vermontcomplexsystems-foundation.rw8/RWUIState.plist
@@ -22,10 +22,10 @@
 	<key>projectViewWidth</key>
 	<real>248</real>
 	<key>selectedInspectorTab</key>
-	<string>info</string>
+	<string>pageSettings</string>
 	<key>selectedItems</key>
 	<array>
-		<string>page26</string>
+		<string>page29</string>
 	</array>
 	<key>selectedMode</key>
 	<integer>0</integer>
