update lemurs page
update lemurs page title and meta tags

--- a/vermontcomplexsystems-foundation.rw8/Pages/04-LEMURS/PageAttributes/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/04-LEMURS/PageAttributes/Contents.plist
@@ -79,7 +79,7 @@ margin-bottom:1rem;
 				<key>IndexFilename</key>
 				<string>index.html</string>
 				<key>MetaDescription</key>
-				<string>Research projects at the Vermont Complex Systems Center</string>
+				<string>LEMURS: Lived Experiences Measured Using Rings Study </string>
 				<key>OutputXMLDeclaration</key>
 				<false/>
 				<key>PluginExtension</key>
@@ -103,11 +103,11 @@ margin-bottom:1rem;
 				<key>Variables</key>
 				<dict/>
 				<key>openGraphDescription</key>
-				<string>Research projects at the Vermont Complex Systems Center</string>
+				<string>Lived Experiences Measured Using Rings Study</string>
 				<key>openGraphImageResourceIdentifier</key>
 				<string>311CBDD2-92B7-4018-B098-48F28E0D09AF</string>
 				<key>openGraphTitle</key>
-				<string>Research at Vermont Complex Systems Center</string>
+				<string>LEMURS</string>
 			</dict>
 			<key>Files</key>
 			<array/>
