--- a/vermontcomplexsystems-foundation.rw8/Pages/04-LEMURS/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/04-LEMURS/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2022-10-03T17:17:11Z</date>
+						<date>2022-10-03T20:58:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -174,11 +174,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								4R+Rd2CtXWPg
-								C8VeJOlzNg==
+								Yxen9vVrmVYN
+								uM2VpgjCag==
 								</data>
 								<key>Size</key>
-								<integer>47646</integer>
+								<integer>47550</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
