--- a/vermontcomplexsystems-foundation.rw8/Pages/13-Archive/Data/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/13-Archive/Data/Contents.plist
@@ -13,19 +13,74 @@
 				<string>6054</string>
 				<key>markedImages</key>
 				<array>
+					<string>FEFCB4D8-D335-4887-B8F2-49D59D956B0C.jpeg</string>
+					<string>4D267D51-8AC3-470B-BC07-ADBBD8E77749.jpeg</string>
+					<string>4CAF9111-5B27-4B3F-86D9-81D4D825CEFC.jpeg</string>
+					<string>F0E0EFD4-801C-401E-B4DE-EBD64F653714.jpg</string>
+					<string>85378E5C-1679-4C1C-9798-44291C7EA170.jpeg</string>
+					<string>3B955A40-470C-4683-B702-9848529758FC.jpeg</string>
+					<string>DB209A0B-9299-4D50-AC9F-4C6BB28FEBAC.png</string>
+					<string>904CB2C9-0F11-4E43-8DE9-E1D076BA9EAD.jpeg</string>
+					<string>E97F2417-BD68-448C-91B7-0BE97DC867F8.png</string>
+					<string>B8A1951F-2894-46EE-A7A6-B7AC2B25D7AB.jpg</string>
 					<string>9AA3771A-78A4-45EB-A734-5FF21DDB25D6.png</string>
 					<string>32EA8357-468A-4E2B-AC87-75819DD96CEA.png</string>
-					<string>921BAA7E-FDF7-4456-B843-2CED84DAF2D8.png</string>
-					<string>DC554570-0A89-411C-A771-383841BD19A2.png</string>
-					<string>097FB8F5-4B66-4248-B7DB-A000DE0398F9.tif</string>
-					<string>E97F2417-BD68-448C-91B7-0BE97DC867F8.png</string>
+					<string>4D82F273-30D4-43BE-9408-DEC0C17976AD.jpg</string>
+					<string>A5D5C7B5-A894-4B85-81EB-BE2B5B231C3A.jpeg</string>
+					<string>C1C3C131-9B15-49E4-85AB-B24B18F54CE4.jpeg</string>
+					<string>88772E34-3626-4E83-8B68-B76D7CFD280D.jpeg</string>
+					<string>D25A93E9-D664-4A79-B133-A3E8DDE86047.jpg</string>
 					<string>47C83528-ED9A-4841-A0A3-FCE658098CC8.png</string>
+					<string>6AD6ED14-3F3F-4433-AA26-C7096E9F5554.JPG</string>
+					<string>824DB919-9A6D-46C5-B45A-D7BD20F8A947.png</string>
+					<string>8FCCB529-6D0A-4EFD-8BC7-E98F04E1CFE8.png</string>
+					<string>72285872-E20D-40B5-B598-C381388669BD.png</string>
+					<string>3753C1ED-81C9-4B9B-BEB7-D5624ED4F8A8.jpg</string>
+					<string>097FB8F5-4B66-4248-B7DB-A000DE0398F9.tif</string>
+					<string>F03FA060-6CBB-48E5-BF43-D598CD938903.jpeg</string>
+					<string>456042FE-60F4-4921-A4EC-7DB7E6ADF61B.JPG</string>
+					<string>5BF30921-A671-4CDB-97A7-8BC0411EACE0.jpg</string>
+					<string>2D2C7882-4070-45FF-B2A2-E8EBA0776854.jpg</string>
+					<string>3A11B0C1-9DAE-44AC-B3BA-AC20129F6A6B.png</string>
+					<string>97610C34-CA0D-4A40-81E3-935A5198EB15.png</string>
+					<string>0D23015F-A18C-4669-8E4F-02FED6B490C4.jpeg</string>
+					<string>3D22F3F8-774D-48F3-BA8C-E01132B08199.jpeg</string>
+					<string>5D61BD56-6CDB-4CBB-B59E-06361F9E61E3.jpg</string>
+					<string>5259EB3C-8F9B-49B0-98B7-6F3619CEDC51.png</string>
+					<string>5788FCC3-5087-47E8-81B3-A2B2FECA0ABE.jpg</string>
+					<string>F2416E23-8774-41A8-9C6A-A0C94F645FEC.jpeg</string>
+					<string>FE232A91-069A-4911-B5C7-A83952494984.jpeg</string>
+					<string>074DB506-DD6C-46B2-8A8A-B2CFD1CA4CF2.png</string>
+					<string>DDBD7F79-2153-4D98-B55D-FBC2B1CB73ED.jpeg</string>
+					<string>0EA7C9B3-5BA7-4AA9-8173-A0053C3124AD.jpg</string>
+					<string>A9B228A4-BEE7-45F6-88F9-261598FA9098.jpeg</string>
+					<string>EAA153DC-0A6A-442E-BF56-2E068EFB541C.jpg</string>
+					<string>B7470981-AB76-4C45-98D2-C605358223F8.jpeg</string>
+					<string>5D84A60A-E58F-40A5-8017-0CA9EDC71DB3.png</string>
+					<string>636ED7CB-7626-4238-B88F-2D6E6E0CE773.jpg</string>
+					<string>DBF9EE94-2BBC-48F7-A4C1-65B3DBA8D3D4.jpg</string>
+					<string>9D1F9AE0-6816-4211-BB4C-3ED69B79CAFD.jpeg</string>
+					<string>AD1DD40F-D2AB-49B2-B02D-C7BDFA7D91C5.png</string>
 					<string>D2D5121E-4C53-46A8-A306-23C8B6E642E7.png</string>
-					<string>D77F5D58-9A12-4454-A5B9-293ECD432652.png</string>
-					<string>AF23A873-73A6-4D54-894A-27F9FD3AEB25.png</string>
+					<string>BA97414C-3F7F-4AA4-A7FE-819D687C71F8.jpg</string>
+					<string>893502BA-BCD3-480E-B6FC-2BAD8B7A0C4F.jpg</string>
+					<string>FB2ED7F3-BD34-458F-9541-33A4A28F7DB6.png</string>
+					<string>C69624CF-0442-44EB-A38D-1FE418C6CC31.jpg</string>
+					<string>564025D5-0062-4CCB-BEF7-4FB06B3FD766.jpg</string>
+					<string>ECCD3F1A-3BF0-4C14-8E42-742AD3ED770A.jpg</string>
+					<string>2B2723F5-C4B3-42C6-BBD8-C7A7E9989A98.jpg</string>
+					<string>17E14FC6-211A-4C35-BEB1-36B9703E520C.jpg</string>
+					<string>89BB3204-CFF3-4411-A25C-4DFB8632E05D.jpeg</string>
+					<string>ED0CB92F-FFF8-411E-97D1-AD86C92D334A.png</string>
+					<string>1EEF836A-66E9-4929-8E20-E273DF71BC6E.jpeg</string>
+					<string>29EF119E-8645-49CC-84DB-4DCF2F02CEF1.png</string>
+					<string>E60A35D9-6F04-4DBF-8694-277C91A35AE7.JPG</string>
+					<string>4D8E34CF-B756-4351-A45C-19E462C4B2BB.png</string>
+					<string>921BAA7E-FDF7-4456-B843-2CED84DAF2D8.png</string>
+					<string>A5988491-8ACF-4BDE-9385-42F00D75F820.png</string>
 				</array>
 				<key>previousImageLibraryPath</key>
-				<string>/Users/sharonwilliams/Library/Containers/com.realmacsoftware.rapidweaver8/Data/Library/Application Support/Stacks 4/Stacks Image Backup 22-10-03 #16574935D</string>
+				<string>/Users/sharonwilliams/Library/Containers/com.realmacsoftware.rapidweaver8/Data/Library/Application Support/Stacks 4/Stacks Image Backup 22-10-07 #1052511CE</string>
 				<key>stacks3</key>
 				<data>
 				YnBsaXN0MDDUAAEAAgADAAQABQAGAAcADFgkdmVyc2lv
